--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,7 @@
           window.addEventListener("message", onMessage, false);
           // Set the HTML (instead of the iframe src) to prevent history changes (so "back" will work correctly).
           document.getElementById("platform_iframe_container").innerHTML =
-            '<iframe id="platform_iframe" src="http://www.multiplayer-gaming.com/v1/dist/index.html?onlyGameId=' +
+            '<iframe id="platform_iframe" src="http://www.multiplayer-gaming.com/v1/dist/index.html?onlyGameId=5314856706113536-0' +
             GAME_ID + '" seamless="seamless"></iframe>';
         }
         document.addEventListener('deviceready', onDeviceReady, false);
