--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@
         <!-- cordova.js is injected by phonegap; so if you try to open index.html locally, it won't find cordova.js -->
         <script type="text/javascript" src="cordova.js"></script>
         <script>
-        var GAME_ID = "5125637257822208-1";
+        var GAME_ID = "5314856706113536-0";
         try {
           var savedCode = localStorage.getItem("savedCode");
           if (savedCode) eval(savedCode);
@@ -41,7 +41,7 @@
           window.addEventListener("message", onMessage, false);
           // Set the HTML (instead of the iframe src) to prevent history changes (so "back" will work correctly).
           document.getElementById("platform_iframe_container").innerHTML =
-            '<iframe id="platform_iframe" src="http://www.multiplayer-gaming.com/v1/dist/index.html?onlyGameId=5314856706113536-0' +
+            '<iframe id="platform_iframe" src="http://www.multiplayer-gaming.com/v1/dist/index.html?onlyGameId=' +
             GAME_ID + '" seamless="seamless"></iframe>';
         }
         document.addEventListener('deviceready', onDeviceReady, false);
